--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "test:e2e:ui": "playwright test --ui"
   },
   "dependencies": {
+    "@vercel/speed-insights": "^1.3.1",
     "embla-carousel-vue": "^8.6.0",
     "vue": "^3.5.13",
     "vue-router": "^4.5.0"
