Ignore generated TypeScript config files
- Remove duplicate vite.config.js (use vite.config.ts instead)
- Add vite.config.js and vite.config.d.ts to .gitignore
- These files are auto-generated by TypeScript during build

--- a/.gitignore
+++ b/.gitignore
@@ -15,6 +15,11 @@ out/
 .nuxt/
 .vuepress/dist/
 tsconfig.tsbuildinfo
+*.tsbuildinfo
+
+# TypeScript generated files
+vite.config.js
+vite.config.d.ts
 
 # Test outputs
 test-results/
