--- a/.gitignore
+++ b/.gitignore
@@ -121,6 +121,8 @@ temp/
 # Editor directories and files
 .vscode/*
 !.vscode/extensions.json
+!.vscode/settings.json
+!.vscode/README.md
 .idea
 *.suo
 *.ntvs*
