Fix og:image for social media previews
- Replace simple logo og-image with professionally designed 1200x630 social card
- Add gradient background with brand colors and clear text hierarchy
- Fix vercel.json rewrite rule to exclude static assets (png, jpg, etc)
- Now properly serves og-image.png instead of redirecting to index.html

--- a/vercel.json
+++ b/vercel.json
@@ -1,7 +1,7 @@
 {
   "rewrites": [
     {
-      "source": "/:path*",
+      "source": "/((?!.*\\.(png|jpg|jpeg|gif|ico|svg|css|js|json|txt|xml|webp)).*)",
       "destination": "/index.html"
     }
   ],
