Fix vercel.json routes and hardcode og:image URL
- Use routes instead of rewrites to properly serve static assets
- Explicitly route static file extensions before SPA fallback
- Hardcode og:image URL to https://pacc.services/og-image.png
- Add console logging to vite config for debugging

--- a/vercel.json
+++ b/vercel.json
@@ -1,8 +1,16 @@
 {
-  "rewrites": [
+  "routes": [
     {
-      "source": "/((?!.*\\.(png|jpg|jpeg|gif|ico|svg|css|js|json|txt|xml|webp)).*)",
-      "destination": "/index.html"
+      "src": "/og-image.png",
+      "dest": "/og-image.png"
+    },
+    {
+      "src": "/(.*\\.(png|jpg|jpeg|gif|ico|svg|css|js|json|txt|xml|webp))",
+      "dest": "/$1"
+    },
+    {
+      "src": "/(.*)",
+      "dest": "/index.html"
     }
   ],
   "headers": [
