--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "format": "prettier --write src/",
     "test:e2e": "playwright test",
     "test:e2e:ui": "playwright test --ui",
-    "generate:og": "node scripts/generate-og-image.mjs"
+    "generate:og": "tsx scripts/generate-og-image.ts"
   },
   "dependencies": {
     "@vercel/speed-insights": "^1.3.1",
@@ -34,6 +34,7 @@
     "postcss": "^8.4.49",
     "prettier": "^3.4.2",
     "tailwindcss": "^3.4.17",
+    "tsx": "^4.19.2",
     "typescript": "~5.7.2",
     "vite": "^6.0.3",
     "vue-tsc": "^2.2.0"
