--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
     "format": "prettier --write src/",
     "test:e2e": "playwright test",
     "test:e2e:ui": "playwright test --ui",
-    "generate:og": "tsx scripts/generate-og-image.ts"
+    "generate:og": "tsx scripts/generate-og-image.ts",
+    "generate:og:articles": "tsx scripts/generate-article-og-images.ts"
   },
   "dependencies": {
     "@vercel/speed-insights": "^1.3.1",
