--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "type": "module",
   "scripts": {
     "dev": "vite",
+    "prebuild": "npm run generate:og:all",
     "build": "vue-tsc -b && vite build",
     "preview": "vite preview",
     "lint": "eslint . --fix",
@@ -12,7 +13,9 @@
     "test:e2e": "playwright test",
     "test:e2e:ui": "playwright test --ui",
     "generate:og": "tsx scripts/generate-og-image.ts",
-    "generate:og:articles": "tsx scripts/generate-article-og-images.ts"
+    "generate:og:articles": "tsx scripts/generate-article-og-images.ts",
+    "generate:og:articles:auto": "tsx scripts/generate-article-og-images-auto.ts",
+    "generate:og:all": "npm run generate:og && npm run generate:og:articles"
   },
   "dependencies": {
     "@vercel/speed-insights": "^1.3.1",
