--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "type": "module",
   "scripts": {
     "dev": "vite",
-    "build": "vue-tsc -b && vite build",
+    "build": "vue-tsc -b && vite build && npm run prerender:articles",
     "preview": "vite preview",
     "lint": "eslint . --fix",
     "format": "prettier --write src/",
@@ -14,7 +14,8 @@
     "generate:og": "tsx scripts/generate-og-image.ts",
     "generate:og:articles": "tsx scripts/generate-article-og-images.ts",
     "generate:og:articles:auto": "tsx scripts/generate-article-og-images-auto.ts",
-    "generate:og:all": "npm run generate:og && npm run generate:og:articles"
+    "generate:og:all": "npm run generate:og && npm run generate:og:articles",
+    "prerender:articles": "tsx scripts/prerender-articles.ts"
   },
   "dependencies": {
     "@vercel/speed-insights": "^1.3.1",
